Prueba unitaria de certificate listo