@@ -2,22 +2,22 @@ package com.microservice_certificate;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
-import java.util.Collections;
+
 import java.sql.Date;
 import java.util.List;
 import java.util.Optional;
 
-import org.junit.jupiter.api.BeforeEach;
+
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.microservice_certificate.client.StudentClient;
 import com.microservice_certificate.dto.StudentDTO;
@@ -26,7 +26,11 @@ import com.microservice_certificate.model.Certificate;
 import com.microservice_certificate.repository.ICertificateRepository;
 import com.microservice_certificate.service.CertificateServicelmpl;
 
-public class CertificateServicelmplTest {
+@ExtendWith(MockitoExtension.class)
+class CertificateServicelmplTest {
+
+    @InjectMocks
+    private CertificateServicelmpl certificateService;
 
     @Mock
     private ICertificateRepository iCertificateRepository;
@@ -34,51 +38,63 @@ public class CertificateServicelmplTest {
     @Mock
     private StudentClient studentClient;
 
-    @InjectMocks
-    private CertificateServicelmpl certificateService;
-
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
-
     @Test
-    void testFindByIdReturnsCertificate() {
+    void testFindAll() {
         Certificate cert = new Certificate();
-        cert.setName("Test Cert");
-        when(iCertificateRepository.findById(1L)).thenReturn(Optional.of(cert));
+        cert.setId(1L);
+        cert.setName("Certificado Test");
 
-        Certificate result = certificateService.findById(1L);
+        when(iCertificateRepository.findAll()).thenReturn(List.of(cert));
+
+        List<Certificate> result = certificateService.findAll();
 
         assertNotNull(result);
-        assertEquals("Test Cert", result.getName());
-        verify(iCertificateRepository, times(1)).findById(1L);
+        assertEquals(1, result.size());
+        assertEquals("Certificado Test", result.get(0).getName());
     }
 
     @Test
-    void testSaveCallsRepository() {
+    void testFindById() {
         Certificate cert = new Certificate();
+        cert.setId(1L);
+        cert.setName("Certificado Test");
+
+        when(iCertificateRepository.findById(1L)).thenReturn(Optional.of(cert));
+
+        Certificate found = certificateService.findById(1L);
+
+        assertNotNull(found);
+        assertEquals(1L, found.getId());
+        assertEquals("Certificado Test", found.getName());
+    }
+
+    @Test
+    void testSave() {
+        Certificate cert = new Certificate();
+        cert.setName("Nuevo Certificado");
+
         certificateService.save(cert);
+
         verify(iCertificateRepository, times(1)).save(cert);
     }
 
     @Test
     void testFindStudentsByIdCertificate() {
-        // Arrange
         Certificate cert = new Certificate();
+        cert.setId(1L);
         cert.setName("Certificado Java");
         cert.setIssueDate(Date.valueOf("2024-01-01"));
         cert.setExpirationDate(Date.valueOf("2025-01-01"));
 
         StudentDTO student = StudentDTO.builder()
                 .name("Juan")
+                .certificateId(1L)
                 .issueDate(Date.valueOf("2024-01-01"))
                 .expirationDate(Date.valueOf("2025-01-01"))
-                .certificateId(1L)
                 .build();
 
         when(iCertificateRepository.findById(1L)).thenReturn(Optional.of(cert));
-        when(studentClient.findAllStudentByCertificate(1L)).thenReturn(Arrays.asList(student));
+        when(studentClient.findAllStudentByCertificate(1L)).thenReturn(List.of(student));
 
         StudentByCertificateResponse response = certificateService.findStudentsByIdCertificate(1L);
 
@@ -86,7 +102,5 @@ public class CertificateServicelmplTest {
         assertEquals("Certificado Java", response.getName());
         assertEquals(1, response.getStudentDTOList().size());
         assertEquals("Juan", response.getStudentDTOList().get(0).getName());
-        verify(iCertificateRepository, times(1)).findById(1L);
-        verify(studentClient, times(1)).findAllStudentByCertificate(1L);
     }
 }
